Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-17091

Assertion `old_part_id == m_last_part' failed in ha_partition::update_row or `part_id == m_last_part' in ha_partition::delete_row upon UPDATE/DELETE after dropping versioning

    XMLWordPrintable

Details

    Description

      10.4 6ccd7d2df853baa7646fdc79663d1

      #6  0x00007fc9f1e4abd7 in __assert_fail_base (fmt=<optimized out>, assertion=assertion@entry=0x55d3735acea4 "old_part_id == m_last_part", file=file@entry=0x55d3735abec0 "/git/10.4/sql/ha_partition.cc", line=line@entry=4377, function=function@entry=0x55d3735b0280 <ha_partition::update_row(unsigned char const*, unsigned char const*)::__PRETTY_FUNCTION__> "virtual int ha_partition::update_row(const uchar*, const uchar*)") at assert.c:92
      #7  0x00007fc9f1e4ac82 in __GI___assert_fail (assertion=0x55d3735acea4 "old_part_id == m_last_part", file=0x55d3735abec0 "/git/10.4/sql/ha_partition.cc", line=4377, function=0x55d3735b0280 <ha_partition::update_row(unsigned char const*, unsigned char const*)::__PRETTY_FUNCTION__> "virtual int ha_partition::update_row(const uchar*, const uchar*)") at assert.c:101
      #8  0x000055d373156eef in ha_partition::update_row (this=0x7fc9802129f8, old_data=0x7fc9801108a8 "\374\001 \230\177&\200\311\177", new_data=0x7fc980110878 "\374\001 v\316 \200\311\177") at /git/10.4/sql/ha_partition.cc:4377
      #9  0x000055d3729ed640 in handler::ha_update_row (this=0x7fc9802129f8, old_data=0x7fc9801108a8 "\374\001 \230\177&\200\311\177", new_data=0x7fc980110878 "\374\001 v\316 \200\311\177") at /git/10.4/sql/handler.cc:6229
      #10 0x000055d372b2c8d8 in Update_rows_log_event::do_exec_row (this=0x7fc980234ce0, rgi=0x7fc980000a90) at /git/10.4/sql/log_event.cc:14342
      #11 0x000055d372b258b2 in Rows_log_event::do_apply_event (this=0x7fc980234ce0, rgi=0x7fc980000a90) at /git/10.4/sql/log_event.cc:11507
      #12 0x000055d372603d7b in Log_event::apply_event (this=0x7fc980234ce0, rgi=0x7fc980000a90) at /git/10.4/sql/log_event.h:1481
      #13 0x000055d3725f7d3f in apply_event_and_update_pos_apply (ev=0x7fc980234ce0, thd=0x7fc980001560, rgi=0x7fc980000a90, reason=0) at /git/10.4/sql/slave.cc:3917
      #14 0x000055d3725f8210 in apply_event_and_update_pos (ev=0x7fc980234ce0, thd=0x7fc980001560, rgi=0x7fc980000a90) at /git/10.4/sql/slave.cc:4065
      #15 0x000055d3725f897c in exec_relay_log_event (thd=0x7fc980001560, rli=0x55d376da6e48, serial_rgi=0x7fc980000a90) at /git/10.4/sql/slave.cc:4352
      #16 0x000055d3725fc06a in handle_slave_sql (arg=0x55d376da5180) at /git/10.4/sql/slave.cc:5515
      #17 0x00007fc9f2a8f6ba in start_thread (arg=0x7fc9d12a4700) at pthread_create.c:333
      #18 0x00007fc9f1f2441d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109
      

      See comments for test cases.

      Attachments

        Issue Links

          Activity

            People

              robertbindar Robert Bindar
              alice Alice Sherepa
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: